Fix Markup of Birth Registration form.

--- a/views/birthreg.html
+++ b/views/birthreg.html
@@ -1,146 +1,107 @@
-{% extends './partials/wrapper.html' %}
-
-{% block content %}
+{% extends './partials/wrapper.html' %} {% block content %}
 <div class="col-sm-6 col-sm-offset-4">
 	<form action="/birth" method="POST">
+		<h4 id="heading">CHILD'S DETAILS</h4>
+
 		<div class="form-group">
-			<h4 id="heading">CHILD'S DETAILS</h4>
-			<label for="Firstname">Firstname</label>
-			<input name="firstName" type="text" class="form-control" autocomplete="false" placeholder="Firstname" required>
-			<br>
+			<label for="firstName">Firstname</label>
+			<input name="firstName" id="firstName" type="text" class="form-control" autocomplete="off" placeholder="Firstname" required>
+		</div>
 
-			<label for="Firstname">Other Names</label>
-			<input name="otherNames" type="text" class="form-control" autocomplete="false" placeholder="Other names" required>
-			<br>
+		<div class="form-group">
+			<label for="otherName">Other Names</label>
+			<input name="otherName" id="otherName" type="text" class="form-control" autocomplete="off" placeholder="Other names" required>
+		</div>
 
+		<div class="form-group">
 			<label for="date-of-birth">Date of Birth</label>
-			<input name="dob" type="date" class="form-control" placeholder="date of birth">
-			<br>
+			<input name="dob" id="date-of-birth" type="date" class="form-control" placeholder="date of birth">
+		</div>
 
-			<label for="place0fbirth">Place Of Birth</label>
-			<input name="placeOfBirth" type="text" class="form-control" autocomplete="false" placeholder="place Of Birth">
-			<br>
+		<div class="form-group">
+			<label for="placeOfbirth">Place Of Birth</label>
+			<input name="placeOfBirth" id="placeOfbirth" type="text" class="form-control" autocomplete="off" placeholder="place Of Birth">
+		</div>
 
+		<div class="form-group">
 			<label for="birthsex">Sex</label>
 			<select class="form-control" name="gender" id="birthsex">
 				<option value="female">Female</option>
 				<option value="male">Male</option>
 			</select>
-			<br>
-
-			<label for="Address">Permanent Address</label>
-			<input name="address" type="text" class="form-control" autocomplete="false" placeholder="Home Address" required>
-			<br>
-
-			<label for="localgovt">Local Government Area</label>
-			<select class="form-control" name="LGA" id="">
-				<option value="">LGA</option>
-			</select>
-
-			<h4 id="heading">FATHERS DETAILS</h4>
-			<label for="Father's Fullname">Father's Name</label>
-			<input name="fatherName" type="text" class="form-control" autocomplete="false" placeholder="Father's Fullname" required>
-			<br>
-			<label for="exampleInputEmail1">Email address</label>
-			<input name="fatherEmail" type="email" class="form-control" id="exampleInputEmail1" autocomplete="false" placeholder="Email">
-			<br>
-			<label for="state_of_origin">State of Origin</label>
-			<select class="form-control" name="fatherState">
-				<option>Abia</option>
-				<option>Adamawa</option>
-				<option>Akwa Ibom</option>
-				<option>Anambra</option>
-				<option>Bauchi</option>
-				<option value="">Bayelsa</option>
-				<option value="">Benue</option>
-				<option value="">Borno</option>
-				<option value="">Cross river</option>
-				<option value="">Delta</option>
-				<option value="">Ebonyi</option>
-				<option value="">Edo</option>
-				<option value="">Ekiti</option>
-				<option value="">Enugu</option>
-				<option value="">Federal capital Territory</option>
-				<option value="">Gombe</option>
-				<option value="">Imo</option>
-				<option value="">Jigawa</option>
-				<option value="">Kaduna</option>
-				<option value="">Kano</option>
-				<option value="">Kastina</option>
-				<option value="">Kebbi</option>
-				<option value="">Kogi</option>
-				<option value="">Kwara</option>
-				<option value="">Lagos</option>
-				<option value="">Nasarawa</option>
-				<option value="">Niger</option>
-				<option value="">Ogun</option>
-				<option value="">Ondo</option>
-				<option value="">Osun</option>
-				<option value="">Oyo</option>
-				<option value="">Plateau</option>
-				<option value="">Rivers</option>
-				<option value="">Sokoto</option>
-				<option value="">Taraba</option>
-				<option value="">Yobe</option>
-				<option value="">Zamfara</option>
-			</select>
-			<br>
-			<label for="Nationality">NATIONALITY</label>
-			<input name="fatherNationality" type="text" class="form-control" placeholder="Nationality">
-			<br>
-			<h4 id="heading">MOTHERS DETAILS</h4>
-			<label for="Mother's Fullname">Mothers Name</label>
-			<input name="mothersName" type="text" class="form-control" autocomplete="false" placeholder="mother's Fullname" required>
-			<br>
-			<label for="state_of_origin">State of Origin</label>
-			<select name="motherState" class="form-control">
-				<option>Abia</option>
-				<option>Adamawa</option>
-				<option>Akwa Ibom</option>
-				<option>Anambra</option>
-				<option>Bauchi</option>
-				<option value="">Bayelsa</option>
-				<option value="">Benue</option>
-				<option value="">Borno</option>
-				<option value="">Cross river</option>
-				<option value="">Delta</option>
-				<option value="">Ebonyi</option>
-				<option value="">Edo</option>
-				<option value="">Ekiti</option>
-				<option value="">Enugu</option>
-				<option value="">Federal capital Territory</option>
-				<option value="">Gombe</option>
-				<option value="">Imo</option>
-				<option value="">Jigawa</option>
-				<option value="">Kaduna</option>
-				<option value="">Kano</option>
-				<option value="">Kastina</option>
-				<option value="">Kebbi</option>
-				<option value="">Kogi</option>
-				<option value="">Kwara</option>
-				<option value="">Lagos</option>
-				<option value="">Nasarawa</option>
-				<option value="">Niger</option>
-				<option value="">Ogun</option>
-				<option value="">Ondo</option>
-				<option value="">Osun</option>
-				<option value="">Oyo</option>
-				<option value="">Plateau</option>
-				<option value="">Rivers</option>
-				<option value="">Sokoto</option>
-				<option value="">Taraba</option>
-				<option value="">Yobe</option>
-				<option value="">Zamfara</option>
-			</select>
-			<br>
-			<label for="Nationality">Nationality</label>
-			<input name="motherNationality" type="text" class="form-control" placeholder="Nationality">
 		</div>
+
 		<div class="form-group">
-			<label for="exampleInputEmail1">Email address</label>
-			<input name="motherEmail" type="email" class="form-control" id="exampleInputEmail1" autocomplete="false" placeholder="Email">
+			<label for="address">Permanent Address</label>
+			<input name="address" id="address" type="text" class="form-control" autocomplete="off" placeholder="Home Address" required>
 		</div>
-		<button type="button" class="btn btn-primary btn-lg">Submit</button>
+
+		<div class="form-group">
+			<label for="localgovt">Local Government Area</label>
+			<input name="localGovt" class="form-control" id="localgovt">
+		</div>
+
+		<h4 id="heading">FATHER'S DETAILS</h4>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="fatherName">Father's Name</label>
+					<input name="fatherName" id="fatherName" type="text" class="form-control" autocomplete="off" placeholder="Father's Fullname" required>
+				</div>
+
+				<div class="form-group">
+					<label for="fatherEmail">Email address</label>
+					<input name="fatherEmail" type="email" class="form-control" id="fatherEmail" autocomplete="off" placeholder="Email">
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="fatherState">State of Origin</label>
+					<select class="form-control" name="fatherState" id="fatherState">
+						{% include './partials/state-options.html' %}
+					</select>
+				</div>
+
+				<div class="form-group">
+					<label for="fatherNationality">Nationality</label>
+					<select name="fatherNationality" class="form-control" id="fatherNationality">
+						{% include './partials/country-options.html' %}
+					</select>
+				</div>
+			</div>
+		</div>
+
+		<h4 id="heading">MOTHER'S DETAILS</h4>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="motherName">Mother's Name</label>
+					<input name="motherName" id="motherName" type="text" class="form-control" autocomplete="off" placeholder="mother's Fullname" required>
+				</div>
+
+				<div class="form-group">
+					<label for="motherEmail">Email address</label>
+					<input name="motherEmail" type="email" class="form-control" id="motherEmail" autocomplete="off" placeholder="Email">
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="motherState">State of Origin</label>
+					<select name="motherState" class="form-control" id="motherState">
+						{% include './partials/state-options.html' %}
+					</select>
+				</div>
+
+				<div class="form-group">
+					<label for="motherNationality">Nationality</label>
+					<select name="motherNationality" class="form-control" id="motherNationality">
+						{% include './partials/country-options.html' %}
+					</select>
+				</div>
+			</div>
+		</div>
+
+		<button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
 	</form>
 </div>
 {% endblock %}
