--- a/views/birthreg.html
+++ b/views/birthreg.html
@@ -1,6 +1,9 @@
 {% extends './partials/wrapper.html' %} {% block content %}
 <div class="col-sm-6 col-sm-offset-4">
 	<form action="/birth" method="POST">
+		{% if (message) %}
+		<div class="alert alert-danger">{{ message }}</div>
+		{% endif %}
 		<h4 id="heading">CHILD'S DETAILS</h4>
 
 		<div class="form-group">
