--- a/views/deathreg.html
+++ b/views/deathreg.html
@@ -1,6 +1,9 @@
 {% extends './partials/wrapper.html' %} {% block content %}
 <div class="col-sm-6 col-sm-offset-4">
 	<form action="/death" method="POST">
+		{% if (message) %}
+		<div class="alert alert-danger">{{ message }}</div>
+		{% endif %}
 		<h3 id="heading">DEATH REGISTRATION</h3>
 
 		<div class="form-group">
