--- a/views/login.html
+++ b/views/login.html
@@ -31,7 +31,9 @@
         <div class="row">
         <div class="col-xs-6 col-md-6 right-nav">
                 <img src="img/welcome1.png" width="300" height="80">
-
+				{% if (message) %}
+				<div class="alert alert-danger">{{ message }}</div>
+				{% endif %}
                 <form class="form-signin" method="POST" action="/login">
                     <h2 class="form-signin-heading">Please Sign In</h2>
 
