--- a/views/error.html
+++ b/views/error.html
@@ -1,9 +1,11 @@
 {% extends './partials/wrapper.html' %}
 
 {% block content %}
-  <h1>{{ message }}</h1>
-  <h2>{{ error.status }}</h2>
-  <pre>
-  {{ error.stack }}
-  </pre>
+  <div class="col-sm-9 col-sm-offset-3">
+	<h1>{{ message }}</h1>
+	<h2>{{ error.status }}</h2>
+	<pre>
+	{{ error.stack }}
+	</pre>
+  </div>
 {% endblock %}
