--- a/css/loginpage.css
+++ b/css/loginpage.css
@@ -43,15 +43,14 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #043c2c;
+    overflow-y: auto;
+    background-color: rgb(231, 238, 237);
     border-right: 1px solid #eee;
-  }
-}
-.navbar-inverse {
-    background-color: #520b5f;
 }
 
+.navbar-inverse {
+    background-color: rgba(183, 175, 175, 0.08);
+}
 /* Sidebar navigation */
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
@@ -108,4 +107,76 @@ body {
 }
 #heading {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+a {
+  color: black;
+}
+.mycustombtn{
+  background-color: rgb(0, 101, 170);
+border-bottom-color: rgb(0, 101, 170);
+border-bottom-left-radius: 50px;
+border-bottom-right-radius: 50px;
+border-bottom-style: solid;
+border-bottom-width: 4px;
+border-image-outset: 0 0 0 0;
+border-image-repeat: stretch stretch;
+border-image-slice: 100% 100% 100% 100%;
+border-image-source: none;
+border-image-width: 1 1 1 1;
+border-left-color: rgb(0, 101, 170);
+border-left-style: solid;
+border-left-width: 4px;
+border-right-color: rgb(0, 101, 170);
+border-right-style: solid;
+border-right-width: 4px;
+border-top-color: rgb(0, 101, 170);
+border-top-left-radius: 50px;
+border-top-right-radius: 50px;
+border-top-style: solid;
+border-top-width: 4px;
+box-sizing: border-box;
+color: rgb(255, 255, 255);
+cursor: pointer;
+display: inline-block;
+font-family: "Segoe UI Local","Segoe WP","Segoe UI Web",Tahoma,"Helvetica Neue",Helvetica,"Meiryo UI",Meiryo,Arial Unicode MS,sans-serif;
+font-feature-settings: normal;
+font-kerning: auto;
+font-language-override: normal;
+font-size: 20px;
+font-size-adjust: none;
+font-stretch: normal;
+font-style: normal;
+font-synthesis: weight style;
+font-variant: normal;
+font-variant-alternates: normal;
+font-variant-caps: normal;
+font-variant-east-asian: normal;
+font-variant-ligatures: normal;
+font-variant-numeric: normal;
+font-variant-position: normal;
+font-weight: 400;
+height: 51px;
+line-height: 24px;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;
+margin-top: 0px;
+max-width: none;
+overflow-wrap: break-word;
+padding-bottom: 11px;
+padding-left: 0px;
+padding-right: 0px;
+padding-top: 8px;
+position: relative;
+text-align: center;
+text-decoration: none;
+text-decoration-color: rgb(255, 255, 255);
+text-decoration-line: none;
+text-decoration-style: solid;
+vertical-align: middle;
+width: 245.15px;
+-moz-border-bottom-colors: none;
+-moz-border-left-colors: none;
+-moz-border-right-colors: none;
+-moz-border-top-colors: none;
 }
