my changes to some files

--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <title>Login</title>
 
-    
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="login.css" rel="stylesheet">
 
@@ -25,34 +25,44 @@
                     <div class="caption">
                         <h3>NIGERIA BIRTH AND DEATH RATES MONITORING SYSTEM</h3>
                         <p> registration made easy</p>
-                        
                     </div>
                 </div>
         </div>
         <div class="row">
-        <div class="col-xs-6 col-md-6 right-nav">          
+        <div class="col-xs-6 col-md-6 right-nav">
                 <img src="img/welcome1.png" width="300" height="80">
-                <form class="form-signin" method="POST" action="">
+				{% if (message) %}
+				<div class="alert alert-danger">{{ message }}</div>
+				{% endif %}
+                <form class="form-signin" method="POST" action="/login">
                     <h2 class="form-signin-heading">Please Sign In</h2>
-                    <label for="inputEmail" class="sr-only">Email address</label>
+
+					{#<label for="inputEmail" class="sr-only">Email address</label>
                     <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                    <br>
-                    <label for="username" class="sr-only">Username</label>
-                    <input type="text" id="username" class="form-control" placeholder="Username"required autofocus>
-                    <br>
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                    <div class="checkbox">
+                    <br>#}
+
+					<div class="form-group">
+						<label for="username" class="sr-only">Username</label>
+						<input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus>
+                    </div>
+
+					<div class="form-group">
+						<label for="password" class="sr-only">Password</label>
+						<input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
+					</div>
+
+					{#<div class="checkbox">
                         <label>
                             <input name="remember" type="checkbox" value="remember-me"> Keep me signed in
                         </label>
-                    </div>
-                    <button name="login" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                    <br>
-                    <p>Don't have an account? <a href="register.html">Register Now!</a></p>
+                    </div>#}
+
+					<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                    {#<br>
+                    <p>Don't have an account? <a href="register.html">Register Now!</a></p>#}
                 </form>
     </div>
-    
+
         </div>
    </div>
     </div>
