--- a/views/reports.html
+++ b/views/reports.html
@@ -12,12 +12,30 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/loginpage.css" rel="stylesheet">
-    <script src="js/Chart.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/report.css">
 </head>
 <body>
-    <h3>welcome statistical page</h3>
-<canvas id="myChart" width="400" height="400"></canvas>
-<script src="js/mychart.js"></script>
-<script src="js/utils"></script>
+{% extends './partials/wrapper.html' %} {% block content %}
+    <div class="col-sm-6 col-sm-offset-3">
+       <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Live Count of Births</h3>
+  </div>
+  <div class="panel-body">
+    <h2 class="livecount">123567</h2>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Live Count of Deaths</h3>
+  </div>
+  <div class="panel-body">
+    <h2 class="livecount">123567</h2>
+  </div>
+</div>
+    </div>
+<img src="img\start.jpg" alt="" width="250" height="200">
+    
+{% endblock %}
 </body>
 </html>
