Update reports to reflect count from DB.

--- a/views/reports.html
+++ b/views/reports.html
@@ -7,7 +7,7 @@
 					<h3 class="panel-title">Live Count of Births</h3>
 				</div>
 				<div class="panel-body">
-					<h2 class="livecount">123567</h2>
+					<h2 class="livecount text-center" id="liveCount">{{ birthCount }}</h2>
 				</div>
 			</div>
 		</div>
@@ -17,7 +17,7 @@
 					<h3 class="panel-title">Live Count of Deaths</h3>
 				</div>
 				<div class="panel-body">
-					<h2 class="livecount">123567</h2>
+					<h2 class="livecount text-center" id="deathCount">{{ deathCount }}</h2>
 				</div>
 			</div>
 		</div>
