Make reports page update live
Use websockets to create make the reports page update whenever a new birth or death record is created.

The sockets uses uWebSockets which is a faster implementation of websockets for NodeJS with a lower memory footprint.

--- a/views/partials/wrapper.html
+++ b/views/partials/wrapper.html
@@ -36,6 +36,8 @@
 		window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
 	</script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="js/nbird.js"></script>
 </body>
 
 </html>
